--- a/webStartingTemplate/style.css
+++ b/webStartingTemplate/style.css
@@ -62,6 +62,7 @@ body {
 .main-content {
     margin-left: 50px;
 }
+}
 
 /*extra small devices*/
 @media screen and (max-width : 575.98px){
@@ -80,17 +81,18 @@ body {
     .main-content{
         margin-left: 50px;
     }
+}
 
 
 /*tablets and medium devices*/
-@media screen (max-width : 768px) {
+@media (max-width : 768px) {
     .sidebar {
         width: 100px;
     }
     .sidebar ul li{
         text-align: center;
     }
-    .sidebar ul li span:nt{
+    .sidebar ul li span:nth-child(2){
         display: none;
     }
     .sidebar ul li i{
