--- a/webStartingTemplate/login.css
+++ b/webStartingTemplate/login.css
@@ -5,7 +5,12 @@
     background-color: #d42424;
 }
 .logo {
-    border-radius: 50px;
+    border-radius: 50%;
+}
+.logoo{
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
 .btn{
     background-color: #4723dc;
