--- a/login.css
+++ b/login.css
@@ -12,6 +12,11 @@
     display: flex;
     align-items: center;
 }
+.container{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
 .btn{
     background-color: #4723dc;
     color: #ffffff;
